--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ sping.datasource.url=jdbc:h2:mem:testdb1
 sping.datasource.driverClassName=org.h2.Driver
 sping.datasource.username=sa
 sping.datasource.password=password
+spring.h2.console.path =/h2-console
 sping.jpa.database-platform=org.hibernate.dialect.H2Dialect
 sping.jpa.hibernate.ddl-auto=create
 sping.jpa.generate-ddl=true
