--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ sping.datasource.username=sa
 sping.datasource.password=password
 spring.h2.console.path =/h2-console
 sping.jpa.database-platform=org.hibernate.dialect.H2Dialect
-sping.jpa.hibernate.ddl-auto=create
+sping.jpa.hibernate.ddl-auto=update
 sping.jpa.generate-ddl=true
 server.port=8080
 
