--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,5 +2,5 @@ spring.datasource.url=jdbc:h2:mem:testdb1
 spring.datasource.username=sa
 spring.datasource.password=password
 server.port=80
-spring.jpa.hibernate.ddl-auto = create
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
