--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,6 @@
-sping.datasource.url=jdbc:h2:mem:testdb1
-sping.datasource.driverClassName=org.h2.Driver
-sping.datasource.username=sa
-sping.datasource.password=password
-spring.h2.console.path =/h2-console
-sping.jpa.database-platform=org.hibernate.dialect.H2Dialect
-sping.jpa.hibernate.ddl-auto=update
-sping.jpa.generate-ddl=true
+spring.datasource.url=jdbc:h2:mem:testdb1
+spring.datasource.username=sa
+spring.datasource.password=password
 server.port=8080
-
+spring.jpa.hibernate.ddl-auto = create
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
