--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.url=jdbc:h2:mem:testdb1
+spring.datasource.url=jdbc:h2:mem:productosdb
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
-server.port=8080
-spring.jpa.hibernate.ddl-auto = create
+spring.datasource.password=12345
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto =create
+spring.h2.console.path =/h2-console
+sping.jpa.generate-ddl=true
+server.port=8010
